--- a/index.html
+++ b/index.html
@@ -54,30 +54,27 @@
             <div class="wrapper">
 
             </div>
-            <button class="btn" type="button" onclick="moveToIndex()">
-                <strong class="no-underline">Click me:></strong>
-                <div id="container-stars">
-                    <div id="stars"></div>
-                </div>
+            <a style="text-decoration: none;" href="flowers.html">
+                <button class="btn" type="button" onclick="moveToIndex()">
+                    <strong class="no-underline">Click me:></strong>
+                    <div id="container-stars">
+                        <div id="stars"></div>
+                    </div>
 
-                <div id="glow">
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                </div>
-            </button>
-            <img src="../img/tuyetnhung-nobackground.png" class="character" />
+                    <div id="glow">
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                    </div>
+                </button>
+            </a>
+            <img src="img/tuyetnhung-nobackground.png" class="character" />
         </div>
 
         <audio id="myAudio" autoplay loop>
             <source src="./audio/intro.mp3" type="audio/mpeg">
         </audio>
     </div>
-    <script>
-
-        function moveToIndex() {
-            window.location.href = "../flowers.html";
-        }
-    </script>
+    
 </body>
 
 </html>
