--- a/index.html
+++ b/index.html
@@ -4,17 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tuyet Nhung BD</title>
+    <title>Hope u happy</title>
+    <link rel="icon" href="img/heart.png" type="image/x-icon">
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
     <link href="https://fonts.googleapis.com/css2?family=Protest+Revolution&family=Protest+Riot&display=swap"
         rel="stylesheet">
-    <script>
-        var x = document.getElementById("myAudio").autoplay;
-    </script>
-
 </head>
 
 <body>
@@ -56,7 +52,7 @@
             </div>
             <a style="text-decoration: none;" href="flowers.html">
                 <button class="btn" type="button" onclick="moveToIndex()">
-                    <strong class="no-underline">Click me:></strong>
+                    <strong class="no-underline">CLICK ME</strong>
                     <div id="container-stars">
                         <div id="stars"></div>
                     </div>
@@ -69,12 +65,11 @@
             </a>
             <img src="img/tuyetnhung-nobackground.png" class="character" />
         </div>
-
         <audio id="myAudio" autoplay loop>
             <source src="./audio/intro.mp3" type="audio/mpeg">
         </audio>
     </div>
-    
+
 </body>
 
 </html>
