--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hope u happy</title>
+    <title>Hope u </title>
     <link rel="icon" href="img/heart.png" type="image/x-icon">
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,7 +51,7 @@
 
             </div>
             <a style="text-decoration: none;" href="flowers.html">
-                <button class="btn" type="button" onclick="moveToIndex()">
+                <button class="btn" type="button">
                     <strong class="no-underline">CLICK ME</strong>
                     <div id="container-stars">
                         <div id="stars"></div>
