--- a/flowers.html
+++ b/flowers.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="main.js" type="text/javascript"></script>
-  <title>Flowers</title>
+  <title>Happy</title>
+  <link rel="icon" href="img/heart.png" type="image/x-icon">
   <script>
     var x = document.getElementById("myAudio").autoplay;
   </script>
